tests/ui/rfcs/rfc-2126-extern-absolute-paths/single-segment.stderr
error: crate root imports need to be explicitly named: `use crate as name;`
  --> $DIR/single-segment.rs:5:5
   |
LL | use crate;
   |     ^^^^^

error[E0423]: expected value, found crate `xcrate`
  --> $DIR/single-segment.rs:9:13
   |
LL |     let s = ::xcrate;
   |             ^^^^^^^^ not a value

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0423`.
